# AnchorNet-Contracts

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: auto-assign.yml  ci.yml
docs/: ADMIN.md  ERRORS.md  EVENTS.md  PAGINATION.md  PUBLIC_API_CHECKLIST.md
proptest-regressions/: test.txt
src/: error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
test_snapshots/test/: full_withdraw_still_decrements_providers.1.json  providers_counter_survives_interleaved_provide_withdraw.1.json  test_accept_admin_emits_admin_changed_event.1.json  test_accept_admin_wrong_candidate_fails.1.json  test_admin_can_extend_instance_ttl.1.json  test_admin_can_still_pause_with_operator_appointed.1.json  test_admin_changed_provenance_parity.1.json  test_anchor_balances_lists_only_nonzero_holdings.1.json  test_asset_count_matches_list_assets_length.1.json  test_asset_fee_falls_back_to_global_by_default.1.json  test_asset_fee_override_is_per_asset.1.json  test_asset_fee_read_bumps_ttl.1.json  test_cancel_executed_fails.1.json  test_cancel_expired_and_settlement_race_expired_wins.1.json  test_cancel_expired_settlement_disabled_by_default.1.json  test_cancel_expired_settlement_reclaims_at_boundary.1.json  test_cancel_expired_settlement_rejects_already_executed.1.json  test_cancel_expired_settlement_rejects_before_expiry.1.json  test_cancel_expired_settlement_rejects_double_reclaim.1.json  test_cancel_restores_liquidity_with_fee_set.1.json  test_cancel_settlement_and_expired_race_cancel_wins.1.json  test_cancel_settlement_returns_liquidity.1.json  (+136 more)
